# migrate-create-react-app-to-bazel

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  package.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
react/: BUILD.bazel  Dockerfile  jest.bzl  jest.config.js  package.json  tsconfig.json  webpack-dev.config.js  webpack-prod.config.js
react/config/: paths.js  webpack.config.js  webpackDevServer.config.js
react/src/: App.js  MyComponent.test.js
react/src-bazel/my_component/: BUILD.bazel
react/src-bazel/my_component/src/: MyComponent.tsx
